move gunner screen from bg to front

--- a/cartitext.html
+++ b/cartitext.html
@@ -30,6 +30,8 @@ h1 {
 	font-size: 30px;
 }
 
+/* background */
+/*
 body::after  {
   content: "";
   background: url("gunnertext.jpg");
@@ -43,7 +45,7 @@ body::after  {
   background-position: center;
   z-index: -1;
 }
-
+*/
 
 </style>
 
@@ -166,6 +168,10 @@ function cartify() {
 
 <h1>a +! 🖤 playboi carti 🖤^! text generator +:)
 <br> by *+ @lscorrcho ++** ok ! </h1>
+
+<div id="gunner">
+<img src="gunnertext.jpg" width=320px>
+</div>
 
 <div id="plaintextarea">
 <textarea id="userinput" placeholder="enter your plain text here..." rows="10" cols="60">
