--- a/cartitext.html
+++ b/cartitext.html
@@ -15,6 +15,11 @@ body {
    font-weight: 300;
 }
 
+#logo {
+	padding-top: 20px;
+	padding-bottom: 20px;
+}
+
 div {
     padding: 6px;
     font-size: 16px;
@@ -30,13 +35,11 @@ h1 {
 	font-size: 30px;
 }
 
-/* background */
-/*
 body::after  {
   content: "";
-  background: url("gunnertext.jpg");
+  background: url("./textgenimg/gunnertext.jpg");
   background-repeat: no-repeat;
-  opacity: 0.2;
+  opacity: 0.10;
   top: 0;
   left: 0;
   bottom: 0;
@@ -45,7 +48,7 @@ body::after  {
   background-position: center;
   z-index: -1;
 }
-*/
+
 
 </style>
 
@@ -166,11 +169,13 @@ function cartify() {
 </head>
 <body>
 
+<!-- 
 <h1>a +! 🖤 playboi carti 🖤^! text generator +:)
 <br> by *+ @lscorrcho ++** ok ! </h1>
+ -->
 
-<div id="gunner">
-<img src="gunnertext.jpg" width=320px>
+<div id="logo">
+<img src="./textgenimg/textgenlogo.png" alt="Playboi Carti Text Generator" width="500px" >
 </div>
 
 <div id="plaintextarea">
