--- a/cartitext_white.html
+++ b/cartitext_white.html
@@ -213,6 +213,8 @@ function cartify() {
 
 	document.getElementById("cartitext").value = cartiOutput;
 	
+	document.getElementById("cartitext").style.height = "100px";
+	
 	document.getElementById("cartitext").style.height = (document.getElementById("cartitext").scrollHeight)+"px";
 }
 
