chill pink background for now

--- a/cartitext.html
+++ b/cartitext.html
@@ -17,7 +17,7 @@ by lance encarnado (2019)
 
 <style>
 body, footer, textarea {
-	background-color: #ff0000;
+	background-color: #e24d4d;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
    	font-weight: 300;
    	color: #ffffff;
