--- a/cartitext.html
+++ b/cartitext.html
@@ -9,7 +9,7 @@ by lance encarnado (2019)
 <html>
 <head>
 
-<meta name="viewport" content="width=650"/>
+<meta name="viewport" content="width=600"/>
 
 <title>Playboi Carti Text Generator **!++</title>
 <!-- 
@@ -114,6 +114,8 @@ body::after  {
 	-ms-user-select: none; /* IE10+/Edge */
 	user-select: none; /* Standard */
 	z-index: -1;
+	font-size: 13px;
+	line-height: 2.5;
 }
 
 /* 
@@ -317,7 +319,7 @@ function cartify() {
 
 <footer class="footer">
 playboi carti text generator by @LScorrcho (2019) 🦋
-<br><a href="http://tacklebox.company/"><img alt="Tacklebox" src="./textgenimg/tblogo_white.png" height="38px"></a>
+<br><a href="http://tacklebox.company/"><img alt="Tacklebox" src="./textgenimg/tblogo_white.png" height="35px"></a>
 </footer>
 
 </body>
