--- a/cartitext.html
+++ b/cartitext.html
@@ -19,6 +19,10 @@ by lance encarnado (2019)
 
 <style>
 
+html, body, footer {
+	text-align: center;
+}
+
 html, body {
   height: 100%;
   margin: 0;
@@ -109,10 +113,6 @@ body::after  {
 	padding-left: 12px;
 	padding-bottom: 20px;
   	width: 100%;
-	-webkit-user-select: none; /* Safari */        
-	-moz-user-select: none; /* Firefox */
-	-ms-user-select: none; /* IE10+/Edge */
-	user-select: none; /* Standard */
 	z-index: -1;
 	font-size: 13px;
 	line-height: 2.5;
@@ -294,7 +294,7 @@ function cartify() {
 </div>
 
 <div id="plaintextarea">
-<textarea id="userinput" placeholder="enter your plain text here..." rows="9" cols="65">
+<textarea id="userinput" placeholder="enter your plain text here..." rows="8" cols="65">
 </textarea>
 </div>
 <div id="caseselection">
@@ -310,7 +310,7 @@ function cartify() {
 </div>
 <br>
 <div id="cartitextarea">
-<textarea id="cartitext" placeholder="your ! carti text . will :( !^ appear here ++** 🦋" rows="9" cols="65" readonly>
+<textarea id="cartitext" placeholder="your ! carti text . will :( !^ appear here ++** 🦋" rows="8" cols="65" readonly>
 </textarea>
 </div>
 
