changing font sizes

--- a/cartitext.html
+++ b/cartitext.html
@@ -32,12 +32,12 @@ html, body {
   min-height: 100%;
   /* Equal to height of footer */
   /* But also accounting for potential margin-bottom of last child */
-  margin-bottom: -100px;
+  margin-bottom: -110px;
 }
 
 .footer,
 .push {
-  height: 100px;
+  height: 110px;
 }
 
 body, footer, textarea {
@@ -54,12 +54,12 @@ body, footer, textarea {
 
 div {
     padding: 6px;
-    font-size: 17px;
+    font-size: 13px;
 }
 
 textarea {
     padding: 6px;
-    font-size: 17px;
+    font-size: 13px;
     color: black;
     background-color: #ffffff;
     /* border:1px solid #ffffff; */
@@ -110,12 +110,12 @@ body::after  {
 
 .footer {
   	/* position: fixed; */
-	padding-left: 12px;
+	padding-left: 13px;
 	padding-bottom: 20px;
   	width: 100%;
 	z-index: -1;
 	font-size: 13px;
-	line-height: 2.5;
+	line-height: 1.2;
 }
 
 /* 
@@ -294,7 +294,7 @@ function cartify() {
 </div>
 
 <div id="plaintextarea">
-<textarea id="userinput" placeholder="enter your plain text here..." rows="8" cols="65">
+<textarea id="userinput" placeholder="enter your plain text here..." rows="8" cols="80">
 </textarea>
 </div>
 <div id="caseselection">
@@ -310,7 +310,7 @@ function cartify() {
 </div>
 <br>
 <div id="cartitextarea">
-<textarea id="cartitext" placeholder="your ! carti text . will :( !^ appear here ++** 🦋" rows="8" cols="65" readonly>
+<textarea id="cartitext" placeholder="your ! carti text . will :( !^ appear here ++** 🦋" rows="8" cols="80" readonly>
 </textarea>
 </div>
 
@@ -318,8 +318,9 @@ function cartify() {
 </div>
 
 <footer class="footer">
-playboi carti text generator by @LScorrcho (2019) 🦋
-<br><a href="http://tacklebox.company/"><img alt="Tacklebox" src="./textgenimg/tblogo_white.png" height="35px"></a>
+playboi carti text generator
+<br>by @LScorrcho (2019)
+<br><br><a href="http://tacklebox.company/"><img alt="Tacklebox" src="./textgenimg/tblogo_white.png" height="40px"></a>
 </footer>
 
 </body>
