--- a/cartitext.html
+++ b/cartitext.html
@@ -32,12 +32,12 @@ html, body {
   min-height: 100%;
   /* Equal to height of footer */
   /* But also accounting for potential margin-bottom of last child */
-  margin-bottom: -110px;
+  margin-bottom: -120px;
 }
 
 .footer,
 .push {
-  height: 110px;
+  height: 120px;
 }
 
 body, footer, textarea {
@@ -110,12 +110,12 @@ body::after  {
 
 .footer {
   	/* position: fixed; */
-	padding-left: 13px;
+	/* padding-left: 13px; */
 	padding-bottom: 20px;
   	width: 100%;
 	z-index: -1;
 	font-size: 13px;
-	line-height: 1.2;
+	line-height: 1.4;
 }
 
 /* 
@@ -319,7 +319,7 @@ function cartify() {
 
 <footer class="footer">
 playboi carti text generator
-<br>by @LScorrcho (2019)
+<br>by @LScorrcho & @chrisorzel (2019)
 <br><br><a href="http://tacklebox.company/"><img alt="Tacklebox" src="./textgenimg/tblogo_white.png" height="40px"></a>
 </footer>
 
