new logo, red bg, NON WORKING copy to clipboard button

--- a/cartitext.html
+++ b/cartitext.html
@@ -41,7 +41,7 @@ html, body {
 }
 
 body, footer, textarea {
-	background-color: #e24d4d;
+	background-color: #ff0000;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
    	font-weight: 300;
    	color: #ffffff;
@@ -290,7 +290,7 @@ function cartify() {
  
 
 <div id="logo">
-<img src="./textgenimg/textgenlogo_white.png" alt="Playboi Carti Text Generator" width="500px" >
+<img src="./textgenimg/textgenlogo_bling.png" alt="Playboi Carti Text Generator" width="600px" >
 </div>
 
 <div id="plaintextarea">
@@ -305,6 +305,7 @@ function cartify() {
 
 <div id="dothatshit">
 <button onclick="cartify()">dothatshit!*</button>
+<button>copy to clipboard</button>
 <!-- <a href="#" class="myButton" onclick="cartify();return false;">dothatshit!</a> -->
 
 </div>
