tighten up the mobile viewport on the white version

--- a/cartitext_white.html
+++ b/cartitext_white.html
@@ -9,6 +9,8 @@ by lance encarnado (2019)
 <html>
 <head>
 
+<meta name="viewport" content="width=600"/>
+
 <title>Playboi Carti Text Generator **!++</title>
 <!-- 
 
