centered the white version

--- a/cartitext_white.html
+++ b/cartitext_white.html
@@ -18,6 +18,11 @@ by lance encarnado (2019)
 -->
 
 <style>
+
+html, body, footer {
+	text-align: center;
+}
+
 body, footer, textarea {
    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
    font-weight: 300;
