red bg color change temp

--- a/cartitext.html
+++ b/cartitext.html
@@ -41,7 +41,7 @@ html, body {
 }
 
 body, footer, textarea {
-	background-color: #ff0000;
+	background-color: #e80b0b;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
    	font-weight: 300;
    	color: #ffffff;
