i am trying to stop zooming in on mobile for textareas

--- a/cartitext.html
+++ b/cartitext.html
@@ -57,7 +57,7 @@ div {
     font-size: 13px;
 }
 
-textarea {
+textarea, input[type="text"] {
     padding: 6px;
     font-size: 16px;
     color: black;
