WHY CANT I STOP IOS FROM ZOOMING IN???

--- a/cartitext.html
+++ b/cartitext.html
@@ -41,8 +41,8 @@ html, body {
 }
 
 /* this is to prevent zooming in on IOS when clicking on the textarea */
-body {
-	font-size: 16px;
+body, textarea, input[type=text] {
+	font-size: 16px !important;
 }
 
 body, footer, textarea {
@@ -64,7 +64,7 @@ div {
 
 textarea {
     padding: 6px;
-    font-size: 16px;
+    font-size:16px;
     color: black;
     background-color: #ffffff;
     /* border:1px solid #ffffff; */
