--- a/cartitext.html
+++ b/cartitext.html
@@ -35,6 +35,10 @@ html, body {
   height: 140px;
 }
 
+#tblogo_img:hover {
+  opacity: 0.5;
+}
+
 /* TESTING AREA */
 
 /* 
@@ -266,6 +270,7 @@ function copyText() {
 
 <div id="dothatshit">
 <button onclick="cartify()" id="dothatshit">dothatshit!*</button>
+<button onclick="cartify()" id="redothatshit">redothatshit!*</button>
 <button onclick="copyText()" id="copytoclipboard" disabled>copy to clipboard</button>
 <!-- <a href="#" class="myButton" onclick="cartify();return false;">dothatshit!</a> -->
 
@@ -282,7 +287,7 @@ function copyText() {
 <footer class="footer">
 playboi carti text generator
 <br>by @LScorrcho & @chrisorzel (2019)
-<br><br><a href="http://tacklebox.company/"><img alt="Tacklebox" src="./textgenimg/tblogo_bling.png" height="65px"></a>
+<br><br><a href="http://tacklebox.company/"><img id="tblogo_img" alt="Tacklebox" src="./textgenimg/tblogo_bling.png" height="65px"></a>
 </footer>
 
 </body>
